# fastapi-jwk-auth

./: README.md  pyproject.toml  requirements.txt  setup.py
fastapi_jwk_auth/: __init__.py  jwks_auth.py
